--- a/pipelines.gocd.yaml
+++ b/pipelines.gocd.yaml
@@ -1,6 +1,5 @@
-format_version: 10
 pipelines:
-  sample2-pipeline:
+  sample-pipeline:
     group: defaultGroup
     label_template: ${COUNT}
     lock_behavior: none
